@@ -105,6 +105,7 @@ import org.eclipse.rdf4j.sparqlbuilder.rdf.RdfValue;
 import org.eclipse.rdf4j.sparqlbuilder.util.SparqlBuilderUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.slf4j.event.Level;
 
 import de.tudarmstadt.ukp.inception.kb.config.KnowledgeBaseProperties;
 import de.tudarmstadt.ukp.inception.kb.graph.KBHandle;
@@ -136,6 +137,7 @@ public class SPARQLQueryBuilder
 
     private final Set<Prefix> prefixes = new LinkedHashSet<>();
     private final Set<Projectable> projections = new LinkedHashSet<>();
+
     private final List<GraphPattern> primaryPatterns = new ArrayList<>();
     private final List<GraphPattern> primaryRestrictions = new ArrayList<>();
     private final List<GraphPattern> secondaryPatterns = new ArrayList<>();
@@ -160,6 +162,8 @@ public class SPARQLQueryBuilder
     private final Mode mode;
 
     private List<String> fallbackLanguages = emptyList();
+    private List<String> preResolvedPrefLabelProperties = emptyList();
+    private List<String> preResolvedAdditionalMatchingProperties = emptyList();
 
     /**
      * Case-insensitive mode is a best-effort approach. Depending on the underlying FTS, it may or
@@ -235,7 +239,7 @@ public class SPARQLQueryBuilder
             case ITEM, CLASS, INSTANCE:
                 return aKb.getAdditionalMatchingProperties().stream() //
                         .map(Rdf::iri) //
-                        .collect(toList());
+                        .toList();
             case PROPERTY:
                 return emptyList();
             default:
@@ -263,7 +267,7 @@ public class SPARQLQueryBuilder
                     classPatterns.add(VAR_SUBJECT.has(OWL_INTERSECTIONOF_PATH, aContext));
                 }
 
-                return GraphPatterns.union(classPatterns.stream().toArray(GraphPattern[]::new));
+                return union(classPatterns.stream().toArray(GraphPattern[]::new));
             }
             case CLASS: {
                 var classPatterns = new ArrayList<GraphPattern>();
@@ -273,7 +277,7 @@ public class SPARQLQueryBuilder
                     classPatterns.add(VAR_SUBJECT.has(OWL_INTERSECTIONOF_PATH, aContext));
                 }
 
-                return GraphPatterns.union(classPatterns.stream().toArray(GraphPattern[]::new));
+                return union(classPatterns.stream().toArray(GraphPattern[]::new));
             }
             case INSTANCE:
                 return VAR_SUBJECT.has(PropertyPathBuilder.of(typeOfProperty).then(subClassProperty)
@@ -335,7 +339,7 @@ public class SPARQLQueryBuilder
                     classPatterns.add(VAR_SUBJECT.has(OWL_INTERSECTIONOF_PATH, aContext));
                 }
 
-                return GraphPatterns.union(classPatterns.stream().toArray(GraphPattern[]::new));
+                return union(classPatterns.stream().toArray(GraphPattern[]::new));
             }
             case INSTANCE: {
                 return VAR_SUBJECT.has(typeOfProperty, aContext);
@@ -403,8 +407,8 @@ public class SPARQLQueryBuilder
 
                 var rootConcepts = aKb.getRootConcepts();
                 if (rootConcepts != null && !rootConcepts.isEmpty()) {
-                    rootPatterns.add(new ValuesPattern(VAR_SUBJECT, rootConcepts.stream()
-                            .map(iri -> iri(iri)).collect(Collectors.toList())));
+                    rootPatterns.add(new ValuesPattern(VAR_SUBJECT,
+                            rootConcepts.stream().map(iri -> iri(iri)).collect(toList())));
                 }
                 else {
                     var classPatterns = new ArrayList<GraphPattern>();
@@ -567,6 +571,22 @@ public class SPARQLQueryBuilder
     }
 
     @Override
+    public SPARQLQueryPrimaryConditions withPrefLabelProperties(Collection<String> aProps)
+    {
+        preResolvedPrefLabelProperties = new ArrayList<>(aProps);
+
+        return this;
+    }
+
+    @Override
+    public SPARQLQueryPrimaryConditions withAdditionalMatchingProperties(Collection<String> aProps)
+    {
+        preResolvedAdditionalMatchingProperties = new ArrayList<>(aProps);
+
+        return this;
+    }
+
+    @Override
     public SPARQLQueryPrimaryConditions withFallbackLanguages(String... aString)
     {
         fallbackLanguages = Stream.of(aString).distinct().toList();
@@ -663,13 +683,28 @@ public class SPARQLQueryBuilder
      * Generates a pattern which binds all sub-properties of the label property to the given
      * variable.
      */
-    private GraphPattern bindPrefLabelProperties(Variable aVariable)
+    GraphPattern bindPrefLabelProperties(Variable aVariable)
     {
+        if (!preResolvedPrefLabelProperties.isEmpty()) {
+            return bindPrefLabelProperties(aVariable, preResolvedPrefLabelProperties);
+        }
+
         var pLabel = mode.getLabelProperty(kb);
         var pSubProperty = iri(kb.getSubPropertyIri());
-        var primaryLabelPattern = aVariable
-                .has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(), pLabel);
-        return optional(primaryLabelPattern);
+        var pattern = aVariable.has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(),
+                pLabel);
+        return optional(pattern);
+    }
+
+    /**
+     * Generates a pattern which binds all sub-properties of the label property to the given
+     * variable.
+     */
+    private GraphPattern bindPrefLabelProperties(Variable aVariable,
+            Collection<String> aPrefLabelProperties)
+    {
+        return optional(new ValuesPattern(aVariable,
+                aPrefLabelProperties.stream().map(Rdf::iri).toArray(RdfValue[]::new)));
     }
 
     /**
@@ -678,22 +713,28 @@ public class SPARQLQueryBuilder
      */
     GraphPattern bindMatchTermProperties(Variable aVariable)
     {
+        if (!preResolvedPrefLabelProperties.isEmpty()) {
+            return bindMatchTermProperties(aVariable, preResolvedPrefLabelProperties,
+                    preResolvedAdditionalMatchingProperties);
+        }
+
         var pLabel = mode.getLabelProperty(kb);
         var pSubProperty = iri(kb.getSubPropertyIri());
-        var primaryLabelPattern = aVariable
-                .has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(), pLabel);
+        var pattern = aVariable.has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(),
+                pLabel);
 
-        if (mode.getAdditionalMatchingProperties(kb).isEmpty()) {
+        var additionalMatchingProperties = mode.getAdditionalMatchingProperties(kb);
+        if (additionalMatchingProperties.isEmpty()) {
             // If we only have a single label property, let's make the label optional
             // so that we also get a result for things that might potentially not have
             // any label at all.
-            return optional(primaryLabelPattern);
+            return optional(pattern);
         }
 
         var patterns = new ArrayList<TriplePattern>();
-        patterns.add(primaryLabelPattern);
+        patterns.add(pattern);
 
-        for (var pAddSearch : mode.getAdditionalMatchingProperties(kb)) {
+        for (var pAddSearch : additionalMatchingProperties) {
             patterns.add(aVariable.has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(),
                     pAddSearch));
         }
@@ -702,7 +743,28 @@ public class SPARQLQueryBuilder
         // becomes mandatory, otherwise we get one result for every label property and
         // additional label property and their sub-properties for every concept and that
         // is simply too much.
-        return GraphPatterns.union(patterns.stream().toArray(TriplePattern[]::new));
+        return union(patterns.stream().toArray(TriplePattern[]::new));
+    }
+
+    private GraphPattern bindMatchTermProperties(Variable aVariable,
+            Collection<String> aPrefLabelProperties, Collection<String> aAdditionalLabelProperties)
+    {
+        if (aAdditionalLabelProperties.isEmpty()) {
+            var pattern = new ValuesPattern(aVariable,
+                    aPrefLabelProperties.stream().map(Rdf::iri).toArray(RdfValue[]::new));
+            return pattern;
+        }
+
+        var allProps = new LinkedHashSet<String>();
+        allProps.addAll(aPrefLabelProperties);
+        allProps.addAll(aAdditionalLabelProperties);
+
+        // If additional label properties are specified, then having a label candidate
+        // becomes mandatory, otherwise we get one result for every label property and
+        // additional label property and their sub-properties for every concept and that
+        // is simply too much.
+        return new ValuesPattern(aVariable,
+                allProps.stream().map(Rdf::iri).toArray(RdfValue[]::new));
     }
 
     @Override
@@ -1233,13 +1295,12 @@ public class SPARQLQueryBuilder
         return limitOverride > 0 ? limitOverride : kb.getMaxResults();
     }
 
-    @Override
-    public SelectQuery selectQuery()
+    SelectQuery selectQuery()
     {
         // Must add it anyway because we group by it
         projections.add(VAR_SUBJECT);
 
-        SelectQuery query = Queries.SELECT().distinct();
+        var query = Queries.SELECT().distinct();
         prefixes.forEach(query::prefix);
         projections.forEach(query::select);
 
@@ -1291,8 +1352,6 @@ public class SPARQLQueryBuilder
         var queryId = toHexString(hashCode());
 
         var queryString = selectQuery().getQueryString();
-        // queryString = QueryParserUtil.parseQuery(QueryLanguage.SPARQL, queryString, null)
-        // .toString();
         LOG.trace("[{}] Query: {}", queryId, queryString);
 
         if (returnEmptyResult) {
@@ -1524,7 +1583,7 @@ public class SPARQLQueryBuilder
         // If we have additional search properties, we need to store the label candidates
         // in the handle as well
         if (!mode.getAdditionalMatchingProperties(kb).isEmpty() && matchTerm != null) {
-            String language = extractLanguage(matchTerm).orElse(null);
+            var language = extractLanguage(matchTerm).orElse(null);
             aTargetHandle.addMatchTerm(matchTerm.getValue().stringValue(), language);
         }
 
@@ -1727,6 +1786,61 @@ public class SPARQLQueryBuilder
     }
 
     @Override
+    public Set<String> resolvePrefLabelProperties(RepositoryConnection aConnection)
+    {
+        var pLabel = mode.getLabelProperty(kb);
+        var properties = new LinkedHashSet<String>();
+
+        resolveSubProperties(aConnection, pLabel, properties);
+
+        return properties;
+    }
+
+    @Override
+    public Set<String> resolveAdditionalMatchingProperties(RepositoryConnection aConnection)
+    {
+        var properties = new LinkedHashSet<String>();
+
+        for (var pAddSearch : mode.getAdditionalMatchingProperties(kb)) {
+            resolveSubProperties(aConnection, pAddSearch, properties);
+        }
+
+        return properties;
+    }
+
+    private void resolveSubProperties(RepositoryConnection aConnection, Iri aRootProperty,
+            Set<String> properties)
+    {
+        var varProperty = var("property");
+        var pSubProperty = iri(kb.getSubPropertyIri());
+        var pattern = varProperty.has(PropertyPathBuilder.of(pSubProperty).zeroOrMore().build(),
+                aRootProperty);
+
+        var query = Queries.SELECT().distinct().where(pattern);
+
+        var tupleQuery = aConnection.prepareTupleQuery(query.getQueryString());
+        tupleQuery.setIncludeInferred(includeInferred);
+
+        try (var result = tupleQuery.evaluate()) {
+            while (result.hasNext()) {
+                var bindings = result.next();
+                if (bindings.isEmpty()) {
+                    continue;
+                }
+
+                var property = bindings.getBinding(varProperty.getVarName());
+                if (property != null) {
+                    properties.add(property.getValue().stringValue());
+                }
+            }
+        }
+        catch (QueryEvaluationException e) {
+            throw new QueryEvaluationException(
+                    e.getMessage() + " while running query:\n" + query.getQueryString(), e);
+        }
+    }
+
+    @Override
     public boolean equals(final Object other)
     {
         if (!(other instanceof SPARQLQueryBuilder)) {
@@ -1743,6 +1857,13 @@ public class SPARQLQueryBuilder
     public int hashCode()
     {
         return selectQuery().getQueryString().hashCode();
+    }
+
+    @Override
+    public void logQueryString(Logger aLog, Level aLevel, String aPrefix)
+    {
+        Arrays.stream(selectQuery().getQueryString().split("\n"))
+                .forEachOrdered(l -> aLog.atLevel(aLevel).log("{}{}", aPrefix, l));
     }
 
     private static class PromotableExistsFilter
